--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         </div>
         <div class="nav">
           <ul>
-            <li>Menu</li>
-            <li>Services</li>
-            <li>About Us</li>
-            <li>Locations</li>
-            <li>Franchise</li>
-            <li>Contact Us</li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#service">Services</a></li>
+            <li><a href="#contact">About Us</a></li>
+            <li><a href="#location">Locations</a></li>
+            <li><a href="#franchise">Franchise</a></li>
+            <li><a href="#contact">Contact Us</a></li>
           </ul>
         </div>
       </div>
@@ -32,7 +32,7 @@
           <div class="learn-btn"><button>Learn More</button></div>
         </div>
       </div>
-      <div class="drinks">
+      <div class="drinks" id="menu">
         <div class="drinks-img">
           <img class="crossaint" src="./images/crossaint.png" alt="crossaint" />
           <img src="./images/cup.png" alt="cup-image" class="cup-image" />
@@ -73,7 +73,7 @@
           <button class="drink-btn">View Full Menu</button>
         </div>
       </div>
-      <div class="service">
+      <div class="service" id="service">
         <h2>Services</h2>
 
         <div class="underlines"><div class="underline"></div></div>
@@ -142,7 +142,7 @@
           </div>
         </div>
       </div>
-      <div class="feedback-box">
+      <div class="feedback-box" id="franchise">
         <h2>FEEL THE VIBE OF OUR CUSTOMERS</h2>
         <div class="underlines first">
           <div class="underline"></div>
@@ -193,7 +193,7 @@
           </div>
         </div>
       </div>
-      <div class="location">
+      <div class="location" id="location">
         <img src="./images/map.png" alt="" />
         <div class="location-cnt">
           <h2>FIND HIMALAYAN JAVA NEAR YOU</h2>
@@ -225,7 +225,7 @@
           <img src="./images/first.png" alt="" />
         </div>
       </div>
-      <div class="footer">
+      <div class="footer" id="contact">
         <div class="footer-content">
           <img src="./images//logo2.png" alt="" />
           <p>Tridevi marg, Thamel Kathmandu</p>
