changes in design for responsive

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
       </div>
       <div class="location" id="location">
-        <img src="./images/map.png" alt="" />
+        <img src="./images/map.png" alt="" class="loc-pic" />
         <div class="location-cnt">
           <h2>FIND HIMALAYAN JAVA NEAR YOU</h2>
           <div class="underlines first">
@@ -227,7 +227,6 @@
               />
             </div>
             <img src="./images/coffee-bean.png" class="beans3" alt="bean" />
-            <img src="./images/coffee-bean.png" class="beans4" alt="bean" />
           </div>
         </div>
       </div>
